# selfee

./: Makefile  README.md  main.py  manage.py  pyproject.toml
hurl/: login.hurl  pokemon.hurl
secure_poke_api/: asgi.py  models.py  services.py  settings.py  urls.py  wsgi.py
secure_poke_api/management/commands/: update_pokemons.py
secure_poke_api/migrations/: 0001_initial.py
secure_poke_api/views/: management.py  pokemon.py
